# sentinel-ops-dashboard

./: .env.example  .gitignore  PROJECT_BRIEF.md  README.md  docker-compose.yml  render.yaml  vercel.json
.github/workflows/: ci.yml
apps/api/: .dockerignore  Dockerfile  alembic.ini  fly.toml  pyproject.toml
apps/api/alembic/: env.py  script.py.mako
apps/api/alembic/versions/: 20260429_0001_add_operational_indexes.py
apps/api/app/: __init__.py  main.py
apps/api/app/api/: __init__.py  deps.py  routes_assets.py  routes_auth.py  routes_dashboard.py  routes_events.py  routes_health.py  routes_incidents.py  routes_realtime.py  serializers.py
apps/api/app/core/: __init__.py  config.py  database.py  security.py
apps/api/app/domain/: __init__.py  enums.py  models.py
apps/api/app/schemas/: __init__.py  ai.py  auth.py  dashboard.py  operations.py  realtime.py
apps/api/app/services/: __init__.py  auth.py  incident_summary.py  realtime.py  seed.py
apps/api/app/simulation/: __init__.py  generator.py
apps/api/scripts/: entrypoint.sh
apps/api/tests/: conftest.py  test_assets.py  test_auth.py  test_dashboard.py  test_events.py  test_incidents.py  test_realtime.py  test_summary.py
apps/web/: Dockerfile  index.html  package-lock.json  package.json  tailwind.config.ts  vitest.config.ts
apps/web/src/: main.tsx
apps/web/src/app/: App.tsx  AppShell.tsx  ProtectedRoute.tsx
apps/web/src/components/: ActivitySparkline.test.tsx  ActivitySparkline.tsx  Skeleton.tsx  (+5 more)
docs/superpowers/specs/: 2026-05-05-readme-polish-design.md  2026-05-12-deployment-readiness-design.md
(+21 files in other folders)
