[project]
name = "sentinel-api"
version = "0.1.0"
description = "FastAPI backend for the Sentinel operational awareness dashboard."
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.30.0",
  "sqlalchemy>=2.0.30",
  "alembic>=1.13.0",
  "psycopg[binary]>=3.1.19",
  "email-validator>=2.1.1",
  "pydantic-settings>=2.2.1",
  "passlib[bcrypt]>=1.7.4",
  "bcrypt>=4.0.1,<4.1.0",
  "python-jose[cryptography]>=3.3.0",
  "openai>=1.30.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "httpx>=0.27.0",
  "ruff>=0.4.4"
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py312"
